<resources>
    <string name="app_name" translatable="false">Red Carpet</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>

    <!--Login Activity related-->
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="login_idp_logo">App Logo</string>

    <!--Email Login related-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="next">Next</string>
    <string name="error_password_length">Password must be 6 to 12 characters</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_required_field">Field is required</string>
    <string name="check_existing_accounts">Checking for existing accounts…</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_enter_password">To sign in, please enter your password for that account.</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="progress_signing_in">Signing in…</string>
    <string name="send">Send</string>
    <string name="password_recovery_follow_instructions">Follow instructions sent to this email that explain how to reset your password. And try again.</string>
    <string name="create">Create</string>
    <string name="create_a_new_user">Create a new user</string>
    <string name="registering">Registering…</string>
    <string name="password_is_weak">Password is weak</string>
    <string name="user_with_email_already_exist">A user with this email address is already exists</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="google_sign_in_success">Google sign in successful</string>
    <!--Facebook Login-->
    <string name="facebook_app_id">316730305502815</string>
    <string name="fb_login_protocol_scheme">fb316730305502815</string>
    <string name="fb_logged_in">Logged in with Facebook</string>
    <string name="fb_failed">Facebook authentication failed</string>
    <string name="fb_cancelled">Facebook log in cancelled</string>
    <string name="personal_details">Personal Details</string>
    <string name="save_edits">Save edits</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="reset_pass_sending">Sending…</string>
    <string name="event_desc_example">A course where you will learn basics of Android programming. Course will include 2 projects and a written exam at the end of the semester.</string>
    <string name="about">About</string>
    <string name="free_of_charge">Free of Charge</string>
    <string name="event_loc_example">Belval Campus</string>
    <string name="event_date_Example">Mon 02.01.2018 13:00</string>
    <string name="event_organize_example">by University of Luxembourg</string>
    <string name="event_title_example">Principles of Software Development</string>
    <string name="empty_view_title_text">Sorry</string>
    <string name="empty_view_subtitle_text">You have no event at the moment. But you can change this by creating your own event :)</string>
    <string name="create_event_title">Title</string>
    <string name="even_create_organizer">Organizer</string>
    <string name="event_create_date">Date</string>
    <string name="event_create_loc">Location</string>
    <string name="event_create_about">About</string>
    <string name="event_create_price">Price</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
