<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/event_pic_iv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/event_title_tv"
            style="@style/AppTheme.Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/event_title_example" />

        <TextView
            android:id="@+id/event_organizer_tv"
            style="@style/AppTheme.Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/event_organize_example" />

        <TextView
            android:id="@+id/event_date_tv"
            style="@style/AppTheme.Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:drawableStart="@drawable/ic_date_black_24dp"
            android:inputType="datetime"
            android:text="@string/event_date_Example"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/event_loc_tv"
            style="@style/AppTheme.Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:drawableStart="@drawable/ic_location_black_24dp"
            android:text="@string/event_loc_example" />

        <TextView
            android:id="@+id/event_price_tv"
            style="@style/AppTheme.Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:drawableStart="@drawable/ic_tag_black_24dp"
            android:inputType="number"
            android:text="@string/free_of_charge"
            tools:ignore="TextViewEdits" />

        <TextView
            style="@style/AppTheme.Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about" />

        <TextView
            android:id="@+id/event_desc_tv"
            style="@style/AppTheme.Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/event_desc_example" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/event_del_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_delete_forever_white_24dp" />

</RelativeLayout>