<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.email.EmailUserActivity">

    <android.support.constraint.ConstraintLayout
        style="@style/AppTheme.WrapperStyle"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/email_user_title"
            style="@style/AppTheme.Text.Title"
            android:gravity="center"
            android:text="@string/welcome_back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_user_body"
            style="@style/AppTheme.Text.Body"
            android:gravity="center"
            android:text="@string/sign_in_enter_password"
            app:layout_constraintTop_toBottomOf="@id/email_user_title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_user_password_layout"
            style="@style/AppTheme.TextInputLayout.PasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/email_user_body"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_user_password_edit"
                style="@style/AppTheme.TextInputEditText.PasswordField"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/trouble_signing_in"
            style="@style/AppTheme.Text.Link"
            android:layout_width="wrap_content"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toStartOf="@id/email_user_bt_done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_user_password_layout" />

        <Button
            android:id="@+id/email_user_bt_done"
            style="@style/LoginUI.Button"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/trouble_signing_in"
            app:layout_constraintTop_toTopOf="@id/trouble_signing_in" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>