<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/event_create_pic"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
                tools:ignore="ContentDescription" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_event_title">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_create_title"
                    style="@style/AppTheme.TextInputEditText.NameField" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/even_create_organizer">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_create_organizer"
                    style="@style/AppTheme.TextInputEditText.NameField" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_create_date">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_create_date"
                    style="@style/AppTheme.TextInputEditText"
                    android:inputType="datetime" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_create_loc">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_create_loc"
                    style="@style/AppTheme.TextInputEditText.NameField" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_create_price">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_create_price"
                    style="@style/AppTheme.TextInputEditText.NameField"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_create_about">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_create_desc"
                    style="@style/AppTheme.TextInputEditText.NameField"
                    android:inputType="textMultiLine" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/event_create_save_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_done_white_24dp" />

</RelativeLayout>